prevent search results bar from invisibly blocking map when not shown

--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,10 @@ html, body {
   pointer-events: none;
 }
 
+.results__container {
+  max-height: 0;
+}
+
 .leaflet-top.leaflet-left, .leaflet-control-attribution {
   display: none;
   /* to remove wrong zoom, remove attribution */
